# stockpulse-sdk

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
api-reference/catalog-overview/: index.html
api-reference/market/: index.html
api-reference/news/: index.html
api-reference/portfolio/: index.html
api-reference/research/: index.html
architecture/: index.html
docs/: architecture.md  index.md
docs/api-reference/: catalog-overview.md  market.md  news.md  portfolio.md  research.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: environments.md  error-handling.md
docs/sdk-reference/: client.md  config.md  exceptions.md  proxy.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/environments/: index.html
guides/error-handling/: index.html
sdk-reference/client/: index.html
sdk-reference/config/: index.html
sdk-reference/exceptions/: index.html
sdk-reference/proxy/: index.html
search/: search_index.json
stockpulse/: __init__.py  catalog.py  client.py  config.py  exceptions.py  proxy.py
stockpulse/environments/: dev.json  prd.json  sit.json  uat.json
tests/: test_catalog.py  test_client.py  test_config.py  test_proxy.py
